[gd_scene load_steps=13 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://materials/ground.tres" type="Material" id=2]
[ext_resource path="res://materials/wall.tres" type="Material" id=3]
[ext_resource path="res://PlayerPaddle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Puck.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://MainLevel.gd" type="Script" id=7]
[ext_resource path="res://scenes/EnemyPaddle.tscn" type="PackedScene" id=8]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=4]

[sub_resource type="BoxShape" id=6]

[node name="MainLevel" type="Node"]
script = ExtResource( 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 20, 0 )
shadow_enabled = true

[node name="Ground" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 25, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CameraPivot" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 45, 33 )

[node name="Walls" type="Node" parent="."]

[node name="WallRight" type="StaticBody" parent="Walls"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 40, 24.5, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/WallRight"]
mesh = SubResource( 4 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallRight"]
shape = SubResource( 6 )

[node name="WallLeft" type="StaticBody" parent="Walls"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 40, -24.5, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/WallLeft"]
mesh = SubResource( 4 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallLeft"]
shape = SubResource( 6 )

[node name="WallTop" type="StaticBody" parent="Walls"]
transform = Transform( 25, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 2, -39.5 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/WallTop"]
mesh = SubResource( 4 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallTop"]
shape = SubResource( 6 )

[node name="WallBottom" type="StaticBody" parent="Walls"]
transform = Transform( 25, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 2, 39.5 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/WallBottom"]
mesh = SubResource( 4 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallBottom"]
shape = SubResource( 6 )

[node name="PlayerPaddle" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 33 )

[node name="EnemyPaddle" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, -33 )

[node name="Puck" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="PlayerGoal" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 35.6 )

[node name="EnemyGoal" parent="." instance=ExtResource( 6 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, -35.6 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScorePlayerLabel" type="Label" parent="HUD"]
margin_left = 20.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.0392157, 0.137255, 0.937255, 1 )
text = "0"

[node name="ScoreEnemyLabel" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.792969, 0.0712433, 0.0712433, 1 )
text = "0"
align = 2

[connection signal="goal_scored" from="PlayerGoal" to="." method="_on_PlayerGoal_goal_scored"]
[connection signal="goal_scored" from="EnemyGoal" to="." method="_on_EnemyGoal_goal_scored"]
